modified:   def/user_project_wrapper.def 	modified:   gds/user_project_wrapper.gds 	modified:   lef/user_project_wrapper.lef 	modified:   lib/user_project_wrapper.lib 	modified:   mag/user_project_wrapper.mag 	modified:   maglef/user_project_wrapper.mag 	modified:   openlane/user_project_wrapper/config.tcl 	modified:   openlane/user_project_wrapper/macro.cfg 	modified:   sdc/user_project_wrapper.sdc 	modified:   sdf/multicorner/nom/user_project_wrapper.ff.sdf 	modified:   sdf/multicorner/nom/user_project_wrapper.ss.sdf 	modified:   sdf/multicorner/nom/user_project_wrapper.tt.sdf 	modified:   sdf/user_project_wrapper.sdf 	modified:   signoff/user_project_wrapper/metrics.csv 	modified:   spef/multicorner/user_project_wrapper.nom.spef 	modified:   spef/user_project_wrapper.spef 	modified:   spi/lvs/user_project_wrapper.spice 	modified:   verilog/gl/user_project_wrapper.nl.v 	modified:   verilog/gl/user_project_wrapper.v 	modified:   verilog/rtl/user_project_wrapper.v

--- a/openlane/user_project_wrapper/macro.cfg
+++ b/openlane/user_project_wrapper/macro.cfg
@@ -1,4 +1,4 @@
 u_macro_golden 200 600 N
-u_macro_decap64 200 1200 N
-u_macro_tap 200 1800 N
-u_macro_decap8 200 2400 N
+u_macro_decap64 200 1400 N
+u_macro_tap 200 2200 N
+#u_macro_decap8 200 2400 N
